services/gateway-administrator/service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: gtwadmin-service
  namespace: gateway-admin
  labels:
    app.kubernetes.io/name: "gtwadmin-service"
    app.kubernetes.io/instance: "gtwadmin-zgdh42"
    app.kubernetes.io/version: "0.0.4"
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: gateway-admin
spec:
  template:
    spec:
      imagePullSecrets: 
      - name: regcred
      containers:
        - image: 617751658601.dkr.ecr.us-east-2.amazonaws.com/integrations/gateway-adm:0.0.4
          name: gateway-admin
          workingDir: /var/www
          command:
            - /bin/ash
            - -c
          args:
            - cp ./environment/.env .env && nginx -g "daemon on;" && php-fpm -y /usr/local/etc/php-fpm.conf
          imagePullPolicy: IfNotPresent
          env:
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: gtwadmin-database
                  key: DB_PASSWORD
            - name: DB_USERNAME
              valueFrom:
                secretKeyRef:
                  name: gtwadmin-database
                  key: DB_USERNAME
          volumeMounts:
          - name: environment
            mountPath: "/var/www/environment"
            readOnly: false          
          envFrom:
            - configMapRef:
                name: gtwadmin-config
                optional: false
          #   httpGet:
          #     path: "/"
          #   initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: "/"
            initialDelaySeconds: 10
            timeoutSeconds: 5
          ports:
          - containerPort: 80
            protocol: TCP
          resources:
            limits:
              cpu: 150m
              memory: 256M
      volumes:
      - name: environment
        configMap:
          name: gtwadmin-config
